--- a/index.html
+++ b/index.html
@@ -63,12 +63,6 @@
                   <p class="name">VRoidHubで自作のVRMモデルが読み込めます。</p>
                 </a>
               </li>
-              <li>
-                <a href="#">
-                  <img src="img/vrm.png" alt="">
-                  <p class="name">自作のVRMモデルが利用できます</p>
-                </a>
-              </li>
             </ul>
           </div>
         </section>
@@ -91,8 +85,8 @@
               <a class="item" href="https://discord.gg/2YteZwnUWv">
                 <img src="img/icon-community.png" width="40px" alt=""><br>コミュニティー
               </a>
-              <a class="item" href="#">
-                <img src="img/icon-support.png" width="40px" alt=""><br>サポートデスク
+              <a class="item" href="https://tik-choco.com/contact/">
+                <img src="img/icon-support.png" width="40px" alt=""><br>お問い合わせフォーム
               </a>
             </div>
           </div>
