--- a/vroidhub.html
+++ b/vroidhub.html
@@ -34,7 +34,7 @@
           
         </ul>
         <ul class="nav-sns">
-          <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
+          <li><a href="hhttps://twitter.com/intent/follow?screen_name=tikchoco" target="_blank">Twitter</a></li>
         </ul>
       </nav>
 
