--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <![endif]-->
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/ress.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
@@ -89,7 +89,7 @@
             <ul class="list">
               <li>
                 <a href="vroidhub">
-                  <img src="img/20210618120627.jpg" alt="">
+                  <img src="img/vroidhub?pkg=webp" width="100%" height="100%" alt="">
                   <p class="name">VRoidHubで自作のVRMモデルが読み込めます。</p>
                 </a>
               </li>
