--- a/vroidhub.html
+++ b/vroidhub.html
@@ -36,9 +36,9 @@
     <![endif]-->
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/ress.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
@@ -84,7 +84,7 @@
         <section id="news_text">
           <div class="wrapper">
             <h2 class="news-title">VRoid Hubとの連携についてご紹介</h2>
-            <p><img src="img/20210618120627.jpg" alt=""></p>
+            <p><img src="img/vroidhub?pkg=webp" width="100%" height="100%" alt=""></p>
 <p>Pixiv社が開発運営する3DキャラクタープラットフォームVRoid Hubとの連携が決定しました。<br>
   これにより、VRoid Hub上にアップロードされた3Dキャラクターモデルを、自分のアバターとして利用できます。<br>
   （利用できる3Dキャラクターモデルには制限があります）。</p>
