--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <ul class="list">
               <li>
                 <a href="vroidhub">
-                  <img src="img/vroidhub?pkg=webp" width="100%" height="100%" alt="">
+                  <img src="img/vroidhub.webp" width="100%" height="100%" alt="">
                   <p class="name">VRoidHubで自作のVRMモデルが読み込めます。</p>
                 </a>
               </li>
