--- a/vroidhub.html
+++ b/vroidhub.html
@@ -84,7 +84,7 @@
         <section id="news_text">
           <div class="wrapper">
             <h2 class="news-title">VRoid Hubとの連携についてご紹介</h2>
-            <p><img src="img/vroidhub?pkg=webp" width="100%" height="100%" alt=""></p>
+            <p><img src="img/vroidhub.webp?pkg=webp" width="100%" height="100%" alt=""></p>
 <p>Pixiv社が開発運営する3DキャラクタープラットフォームVRoid Hubとの連携が決定しました。<br>
   これにより、VRoid Hub上にアップロードされた3Dキャラクターモデルを、自分のアバターとして利用できます。<br>
   （利用できる3Dキャラクターモデルには制限があります）。</p>
