--- a/about.html
+++ b/about.html
@@ -50,6 +50,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarExample01">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" aria-current="page" href="index">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="event">イベント</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="title">開発タイトル</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about">About</a>
+            </li>
+          </ul>
           </ul>
 
           <ul class="navbar-nav d-flex flex-row">
