--- a/404.html
+++ b/404.html
@@ -12,9 +12,9 @@
     <!-- Google Fonts Roboto -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
     <!-- MDB -->
-    <link rel="stylesheet" href="css/mdb.min.css" />
+    <link rel="stylesheet" href="https://tik-choco.github.io/tikchoco-connect/css/mdb.min.css" />
     <!-- Custom styles -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://tik-choco.github.io/tikchoco-connect/css/style.css" />
 </head>
 <body>
       <!--Main Navigation-->
