--- a/404.html
+++ b/404.html
@@ -117,8 +117,8 @@
   </footer>
   <!--Footer-->
     <!-- MDB -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://tik-choco.github.io/tikchoco-connect/js/mdb.min.js"></script>
     <!-- Custom scripts -->
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="https://tik-choco.github.io/tikchoco-connect/js/footer.js"></script>
 </body>
 </html>
