--- a/404.html
+++ b/404.html
@@ -15,13 +15,9 @@
     <link rel="stylesheet" href="https://tik-choco.github.io/tikchoco-connect/css/mdb.min.css" />
     <!-- Custom styles -->
     <link rel="stylesheet" href="https://tik-choco.github.io/tikchoco-connect/css/style.css" />
-</head>
-<body>
-      <!--Main Navigation-->
-  <header>
     <style>
       #intro {
-        background-image: url(30015512-7ead-4a0c-aa67-a354a7e9c333.png);
+        background-image: url(https://tik-choco.github.io/tikchoco-connect/30015512-7ead-4a0c-aa67-a354a7e9c333.png);
         height: 100vh;
       }
 
@@ -36,8 +32,10 @@
         color: #fff !important;
       }
     </style>
-
-    <!-- Navbar -->
+</head>
+<body>
+      <!--Main Navigation-->
+  <header>
     <nav class="navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
       <div class="container-fluid">
         <!-- Navbar brand -->
