--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
       <div class="container-fluid">
         <!-- Navbar brand -->
-        <a class="navbar-brand nav-link" target="_blank" href="#">
+        <a class="navbar-brand nav-link" target="_blank" href="https://tik-choco.github.io/tikchoco-connect/">
           <strong>TikChoco Connect</strong>
         </a>
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
@@ -49,16 +49,16 @@
         <div class="collapse navbar-collapse" id="navbarExample01">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="index">Home</a>
+              <a class="nav-link" aria-current="page" href="https://tik-choco.github.io/tikchoco-connect/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="event">イベント</a>
+              <a class="nav-link" href="https://tik-choco.github.io/tikchoco-connect/event">イベント</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="title">開発タイトル</a>
+              <a class="nav-link" href="https://tik-choco.github.io/tikchoco-connect/title">開発タイトル</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about">About</a>
+              <a class="nav-link" href="https://tik-choco.github.io/tikchoco-connect/about">About</a>
             </li>
           </ul>
           </ul>
