--- a/404.html
+++ b/404.html
@@ -52,7 +52,10 @@
               <a class="nav-link" aria-current="page" href="https://tik-choco.github.io/tikchoco-connect/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://tik-choco.github.io/tikchoco-connect/event">イベント</a>
+              <a class="nav-link" href="news">News and Updates</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://tik-choco.github.io/tikchoco-connect/event">イベントスケジュール</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://tik-choco.github.io/tikchoco-connect/title">開発タイトル</a>
