--- a/title.html
+++ b/title.html
@@ -56,7 +56,10 @@
                 <a class="nav-link" aria-current="page" href="index">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="event">イベント</a>
+                <a class="nav-link" href="news">News and Updates</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="event">イベントスケジュール</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="title">開発タイトル</a>
