--- a/community.html
+++ b/community.html
@@ -95,30 +95,46 @@
           </section>
         </div> -->
 
-        <section class="container my-3 p-3 text-center"><h2>開催したイベント</h2></section>
+        <section class="container my-3 p-3 text-center"><h2>参加する</h2></section>
 
         <div class="container my-5 p-5 shadow-3">
           <!--Section: Content 3-->
           <section>
             <div class="row">
-              <div class="col-md-6">
-                <img
-                  src="https://img.youtube.com/vi/kJFBjG2eSuk/maxresdefault.jpg"
+                <!-- <img
+                  src="img/SplashScreen.png"
                   class="img-fluid shadow-2-strong"
-                />
-              </div>
-              <div class="col-md-6">
-                <h3 class="mb-3">第1回TikChoco Connect</h3>
+                /> -->
+                <h3 class="mb-3">TikChoco Community</h3>
                 <p class="mb-4">
-                  「TikChoco Connect」では、TikChoco制作の最新ゲーム「TikChoco Online」の情報をお届け致しました。
+                  TikChocoのコミュニティで、感想を共有したり、質問をしたりすることができます。
                 </p>
-                <a type="button" class="btn btn-primary" href="2023Feb">イベントページへ</a>
+                <a type="button" class="btn btn-primary" href="https://discord.gg/2YteZwnUWv">コミュニティーに参加する</a>
               </div>
             </div>
           </section>
           <!--Section: Content 3-->
         </div>
-  
+
+        <div class="container my-5 p-5 shadow-3">
+          <!--Section: Content 3-->
+          <section>
+            <div class="row">
+                <!-- <img
+                  src="img/SplashScreen.png"
+                  class="img-fluid shadow-2-strong"
+                /> -->
+                <h3 class="mb-3">TikChoco Onlineプロジェクトに参加する</h3>
+                <p class="mb-4">
+                  プロジェクトの参加者募集中！ここからゲーム開発をはじめよう！プロジェクトの参加は誰でもできます。
+                </p>
+                <a type="button" class="btn btn-primary" href="https://game-creators.camp/recruits/qYAy4wQmEzc6bymBdoeB">プロジェクトに参加する</a>
+              </div>
+            </div>
+          </section>
+          <!--Section: Content 3-->
+        </div>
+        
   </div>
   <footer id="footer" class=" bg-light text-lg-start">
     <!-- Copyright -->
