--- a/event.html
+++ b/event.html
@@ -59,7 +59,7 @@
                 <a class="nav-link" href="news">News and Updates</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="event">イベントスケジュール</a>
+                <a class="nav-link" href="event">これまでのイベント</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="title">開発タイトル</a>
@@ -95,7 +95,7 @@
           </section>
         </div> -->
 
-        <section class="container my-3 p-3 text-center"><h2>開催したイベント</h2></section>
+        <section class="container my-3 p-3 text-center"><h2>これまでのイベント</h2></section>
 
         <div class="container my-5 p-5 shadow-3">
           <!--Section: Content 3-->
