--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a class="nav-link" href="news">News and Updates</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="event">イベントスケジュール</a>
+              <a class="nav-link" href="event">これまでのイベント</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="title">開発タイトル</a>
