maintenance mode off

--- a/index.html
+++ b/index.html
@@ -1,116 +1,126 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="robots" content="NOINDEX,NOFOLLOW" />
-    <meta name="robots" content="NOARCHIVE" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>TikChoco Connect</title>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
-    <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
-    <!-- MDB -->
-    <link rel="stylesheet" href="css/mdb.min.css" />
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="css/style.css" />
-    <style>
-      #intro {
-        background-image: url(30015512-7ead-4a0c-aa67-a354a7e9c333.png);
-        height: 100vh;
-      }
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    rel="stylesheet"
+  />
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    rel="stylesheet"
+  />
+  <!-- MDB -->
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css"
+    rel="stylesheet"
+  />
+  <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
+  ></script>
+  </head>
 
-      /* Height for devices larger than 576px */
-      @media (min-width: 992px) {
-        #intro {
-          margin-top: -58.59px;
-        }
-      }
-
-      .navbar .nav-link {
-        color: #fff !important;
-      }
-    </style>
-</head>
-<body>
-      <!--Main Navigation-->
-  <header>
-
-
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
-      <div class="container-fluid">
-        <!-- Navbar brand -->
-        <a class="navbar-brand nav-link" target="_blank" href="#">
-          <strong>TikChoco Connect</strong>
-        </a>
-        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
-          aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarExample01">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="index">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="news">News and Updates</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="event">これまでのイベント</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="title">開発タイトル</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about">About</a>
-            </li>
-          </ul>
-          </ul>
-
-          <ul class="navbar-nav d-flex flex-row">
-            <!-- Icons -->
-            <li class="nav-item me-3 me-lg-0">
-              <a class="nav-link" href="https://www.youtube.com/@tik-choco" rel="nofollow"
-                target="_blank">
-                <i class="fab fa-youtube"></i>
-              </a>
-            </li>
-            <li class="nav-item me-3 me-lg-0">
-              <a class="nav-link" href="https://twitter.com/tikchoco" rel="nofollow" target="_blank">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <!-- <li class="nav-item me-3 me-lg-0">
-              <a class="nav-link" href="https://github.com/" rel="nofollow" target="_blank">
-                <i class="fab fa-github"></i>
-              </a>
-            </li> -->
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- Navbar -->
-
-    <!-- Background image -->
-    <div id="intro" class="bg-image shadow-2-strong">
-      <div class="mask d-flex align-items-center h-100" style="background-color: rgba(0, 0, 0, 0.8);">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-xl-5 col-md-8">
-             <img class="bg-white rounded shadow-5-strong p-5" src="73531c078f4e68d46e7624a051f13517_33a73c94c4074cb9c456f0091e465dd7.gif" width="100%">
-            </div>
+  <body>
+    <header>
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img
+              src="img/cropped-i0-1.webp"
+              height="30"
+              alt=""
+              loading="lazy"
+            />
+            TikChoco Connect
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-mdb-toggle="collapse"
+            data-mdb-target="#navbarExample01"
+            aria-controls="navbarExample01"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarExample01">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link" aria-current="page" href="index">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="news">News and Updates</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="event">これまでのイベント</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="title">開発タイトル</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about">About</a>
+              </li>
+            </ul>
           </div>
         </div>
-      </div>
-    </div>
-    <!-- Background image -->
-  </header>
-  <!--Main Navigation-->
+      </nav>
+      <!-- Navbar -->
+    <!-- <div class="container">
+          <section class="container my-3 p-3 text-center"><h2>近日開催予定のイベント</h2></section>
 
-  <!--Footer-->
-  <footer class="bg-light text-lg-start">
+        <div class="container my-5 p-5 shadow-3">
+          <section>
+            <div class="row">
+              <div class="col-md-6">
+                <img
+                  src="https://mdbootstrap.com/img/new/slides/303.jpg"
+                  class="img-fluid shadow-2-strong"
+                />
+              </div>
+              <div class="col-md-6">
+                <h3 class="mb-3">TikChoco Connect</h3>
+                <p class="mb-4">
+                  オンラインゲーム TikChocoOnlineを無料でダウンロードし、インストールしましょう
+                </p>
+                <button type="button" class="btn btn-primary">Download</button>
+              </div>
+            </div>
+          </section>
+        </div> -->
+
+        <section class="container my-3 p-3 text-center"><h2>これまでのイベント</h2></section>
+
+        <div class="container my-5 p-5 shadow-3">
+          <!--Section: Content 3-->
+          <section>
+            <div class="row">
+              <div class="col-md-6">
+                <img
+                  src="https://img.youtube.com/vi/kJFBjG2eSuk/maxresdefault.jpg"
+                  class="img-fluid shadow-2-strong"
+                />
+              </div>
+              <div class="col-md-6">
+                <h3 class="mb-3">第1回TikChoco Connect</h3>
+                <p class="mb-4">
+                  「TikChoco Connect」では、TikChoco制作の最新ゲーム「TikChoco Online」の情報をお届け致しました。
+                </p>
+                <a type="button" class="btn btn-primary" href="2023Feb">イベントページへ</a>
+              </div>
+            </div>
+          </section>
+          <!--Section: Content 3-->
+        </div>
+  
+  </div>
+  <footer id="footer" class=" bg-light text-lg-start">
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       ©  Copyright:
@@ -118,10 +128,9 @@
     </div>
     <!-- Copyright -->
   </footer>
-  <!--Footer-->
-    <!-- MDB -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
-    <!-- Custom scripts -->
-    <script type="text/javascript" src="js/script.js"></script>
-</body>
+  </body>
+
+  <!-- MDB -->
+  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="js/footer.js"></script>
 </html>
