--- a/news.html
+++ b/news.html
@@ -65,6 +65,9 @@
                 <a class="nav-link" href="title">開発タイトル</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="community">Join</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="about">About</a>
               </li>
             </ul>
