--- a/news.html
+++ b/news.html
@@ -81,6 +81,72 @@
           <!--Section: Content 3-->
           <section>
             <div class="row">
+              <div class="col-md-6">
+                <img
+                  src="img/SplashScreen.png"
+                  class="img-fluid shadow-2-strong"
+                />
+              </div>
+              <div class="col-md-6">
+                <h3 class="mb-3">TikChocoOnline</h3>
+                <p class="mb-4">
+                  「TikChoco Online」は、異世界で自由に生活できるサンドボックスオンラインゲームです。
+    
+                </p>
+                <a type="button" class="btn btn-primary" href="https://tik-choco.github.io/tc-website/">公式サイトへ</a>
+              </div>
+            </div>
+          </section>
+          <!--Section: Content 3-->
+        </div>
+        <div class="container my-5 p-5 shadow-3">
+          <!--Section: Content 3-->
+          <section>
+            <div class="row">
+              <div class="col-md-6">
+                <img
+                  src="img/o1120083215068935475.webp"
+                  class="img-fluid shadow-2-strong"
+                />
+              </div>
+              <div class="col-md-6">
+                <h3 class="mb-3">TikChocoOnlineで自分のモデルが利用可能に</h3>
+                <p class="mb-4">
+                  「TikChoco Online」に自分のモデルが利用可能になりました。<br>3Dモデル（VRM）を自作すれば、理想の『自分の姿』を手に入れることができます。
+                </p>
+                <a type="button" class="btn btn-primary" href="https://vroid.com/studio">VRoid Studio公式サイトへ</a>
+              </div>
+            </div>
+          </section>
+          <!--Section: Content 3-->
+        </div>
+            <div class="container my-5 p-5 shadow-3">
+             
+              <section>
+                <div class="row">
+                  <div class="col-md-6">
+                    <img
+                      src="./2023Feb/img/20210618120627.jpg"
+                      class="img-fluid shadow-2-strong"
+                    />
+                  </div>
+                  <div class="col-md-6">
+                    <h3 class="mb-3">TikChocoOnlineとVRoid Hubとの連携が決定</h3>
+                    <p class="mb-4">
+                      Pixiv社が開発運営する3DキャラクタープラットフォームVRoid HubとTikChocoOnlineとの連携が決定しました。<br>
+                      これにより、VRoid Hub上にアップロードされた3Dキャラクターモデルを、自分のアバターとして利用できます。<br>（利用できる3Dキャラクターモデルには制限があります）
+                    </p>
+                    <a type="button" class="btn btn-primary" href="./2023Feb/vroidhub">詳細ページへ</a>
+                  </div>
+                </div>
+              </section>
+              <!--Section: Content 3-->
+            </div>
+
+        <div class="container my-5 p-5 shadow-3">
+          <!--Section: Content 3-->
+          <section>
+            <div class="row">
                 <h3 class="mb-3">VRの未来を開こう</h3>
                 <img
                 src="https://img.youtube.com/vi/kJFBjG2eSuk/maxresdefault.jpg"
