--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
               <a class="nav-link" href="https://tik-choco.github.io/tikchoco-connect/title">開発タイトル</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="community">Join</a>
+              <a class="nav-link" href="https://tik-choco.github.io/tikchoco-connect/community">Join</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://tik-choco.github.io/tikchoco-connect/about">About</a>
