--- a/news.html
+++ b/news.html
@@ -88,7 +88,7 @@
                 />
               </div>
               <div class="col-md-6">
-                <h3 class="mb-3">TikChocoOnline</h3>
+                <h3 class="mb-3">TikChocoOnlineを発表しました。</h3>
                 <p class="mb-4">
                   「TikChoco Online」は、異世界で自由に生活できるサンドボックスオンラインゲームです。
     
