--- a/index.html
+++ b/index.html
@@ -95,49 +95,31 @@
           </div>
         </div>
       </nav>
-          <!-- Background image -->
-    <div id="intro" class="bg-image vh-100 shadow-1-strong">
-      <video style="min-width: 100%; min-height: 100%;" playsinline autoplay muted loop>
-        <source class="h-100"
-          src="src/intro-min.mp4"
-          type="video/mp4"
-        />
-      </video>
-      <div class="mask" style="
-            background: linear-gradient(
-              45deg,
-              rgba(29, 236, 197, 0.7),
-              rgba(91, 14, 214, 0.7) 100%
-            );
-          ">
-        <div class="container d-flex align-items-center justify-content-center text-center h-100">
-          <div class="text-white">
-            <h1 class="mb-3">TikChoco Connect</h1>
-            <h5 class="mb-4">驚きに満ちた新しいゲーム「TikChoco Online」を発表しました。</h5>
-          </div>
-        </div>
-      </div>
-    </div>
     </header>
-
-   
-  
-    <div class="container my-5 p-5 shadow-3">
-      <section class="container my-3 p-3 text-center">  <h2>KeyNote</h2></section>
-      <section>
-        <div class="row">
-          <div class="ratio ratio-16x9">
-            <iframe
-              src="https://www.youtube.com/embed/kJFBjG2eSuk"
-              title="YouTube video"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </div>
-      </section>
-      <!--Section: Content 3-->
-    </div>
-            <div class="container my-5 px-5 pt-5 pb-4 shadow-3">
+              <!-- Background image -->
+              <div id="intro" class="bg-image vh-100 shadow-1-strong">
+                <video style="min-width: 100%; min-height: 100%;" playsinline autoplay muted loop>
+                  <source class="h-100"
+                    src="src/intro-min.mp4"
+                    type="video/mp4"
+                  />
+                </video>
+                <div class="mask" style="
+                      background: linear-gradient(
+                        45deg,
+                        rgba(29, 236, 197, 0.7),
+                        rgba(91, 14, 214, 0.7) 100%
+                      );
+                    ">
+                  <div class="container d-flex align-items-center justify-content-center text-center h-100">
+                    <div class="text-white">
+                      <h1 class="mb-3">TikChoco Connect</h1>
+                      <!-- <h5 class="mb-4">驚きに満ちた新しいゲーム「TikChoco Online」を発表しました。</h5> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <!-- <div class="container my-5 px-5 pt-5 pb-4 shadow-3">
     
           <section class="text-center">
             <h3 class="mb-5">今回の登壇者</h3>
@@ -185,9 +167,8 @@
               </div>
             </div>
           </section>
-        </div>
+        </div> -->
 
-    <!-- <section class="container my-3 p-3 text-center">  <h2>今回発表したものはこちらです。</h2></section> -->
 
    
     
