--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     @media (min-width: 992px) {
       #intro {
         margin-top: -58.59px;
-        height: 70vh !important;
+        /* height: 70vh !important; */
       }
     }
 
@@ -114,7 +114,7 @@
                   <div class="container d-flex align-items-center justify-content-center text-center h-100">
                     <div class="text-white">
                       <h1 class="mb-3">TikChoco Connect</h1>
-                      <!-- <h5 class="mb-4">驚きに満ちた新しいゲーム「TikChoco Online」を発表しました。</h5> -->
+                      <h5 class="mb-4">Coming Soon</h5>
                     </div>
                   </div>
                 </div>
