--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
         </filter>
       </svg>
       <div class="d-flex justify-content-center align-items-center text-center " style="height: calc(100vh - 26px);z-index: 200;">
-        <h1 class="display-4 fw-bold text-uppercase text-dark mb-0" style="letter-spacing: 15px;">Expand your Universe</h1>
+        
+        
+        <div class="fade-text to__bottom" style="--duration: 2.4s; --delay: 0.6s; --ease: ease-out">
+          <h1 class="display-4 fw-bold text-uppercase text-dark mb-0" style="letter-spacing: 15px;">Expand your Universe</h1>
+          </div>
       </div>
     </section>
  <!-- Background image -->
