--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icon.png">
+    <meta name="application-name" content="TikChoco Connect"/>
+    <meta name="msapplication-square70x70logo" content="img/icon.png"/>
+    <meta name="msapplication-square150x150logo" content="img/icon.png"/>
+    <meta name="msapplication-square310x310logo" content="img/icon.png"/>
+    <meta name="msapplication-wide310x150logo" content="img/icon.png"/>
+    <meta name="msapplication-TileColor" content="#0000ff"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>TikChoco Connect</title>
