--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </nav>
       <!-- Navbar -->
     </header>
-    <section class="grainy-gradient-intro">
+    <!-- <section class="grainy-gradient-intro">
       <svg height="0" width="0">
         <filter id='f'>
           <feTurbulence type='fractalNoise' baseFrequency='.5' />
@@ -146,12 +146,12 @@
           <h1 class="display-4 fw-bold text-uppercase text-dark mb-0" style="letter-spacing: 15px;">Expand your Universe</h1>
           </div>
       </div>
-    </section>
+    </section> -->
  <!-- Background image -->
-              <!-- <div id="intro" class="bg-image vh-100 shadow-1-strong">
+              <div id="intro" class="bg-image vh-100 shadow-1-strong">
                 <video style="min-width: 100%; min-height: 100%;" playsinline autoplay muted loop>
                   <source class="h-100"
-                    src="src/intro-min.mp4"
+                    src="src/Lines.mp4"
                     type="video/mp4"
                   />
                 </video>
@@ -164,13 +164,13 @@
                     ">
                   <div class="container d-flex align-items-center justify-content-center text-center h-100">
                     <div class="text-white">
-                      <h1 class="mb-3">TikChoco Connect</h1>
-                      <h5 class="mb-4">Coming Soon</h5>
+                      <h1 class="mb-3">Expand your Universe</h1>
+                      <h5 class="mb-4">あなたの宇宙を広げよう</h5>
                     </div>
                   </div>
                 </div>
-              </div> -->
-            <!-- <div class="container my-5 px-5 pt-5 pb-4 shadow-3">
+              </div>
+            <div class="container my-5 px-5 pt-5 pb-4 shadow-3">
     
           <section class="text-center">
             <h3 class="mb-5">今回の登壇者</h3>
@@ -199,6 +199,16 @@
               <div class="col-md-6 col-lg-3 mb-4">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
+                  src="avatar/agent.jpeg"
+                  alt="avatar"
+                  style="width: 150px;"
+                />
+                <h5 class="mb-3">Agent 1</h5>
+                <p class="mb-0">Translator</p>
+              </div>
+              <div class="col-md-6 col-lg-3 mb-4">
+                <img
+                  class="rounded-circle shadow-1-strong mb-4"
                   src="avatar/04d304184343cfd0faaf78b0183e490e.webp"
                   alt="avatar"
                   style="width: 150px;"
@@ -218,7 +228,7 @@
               </div>
             </div>
           </section>
-        </div> -->
+        </div>
 
 
    
