--- a/404.html
+++ b/404.html
@@ -15,23 +15,6 @@
     <link rel="stylesheet" href="https://tik-choco.github.io/tikchoco-connect/css/mdb.min.css" />
     <!-- Custom styles -->
     <link rel="stylesheet" href="https://tik-choco.github.io/tikchoco-connect/css/style.css" />
-    <style>
-      #intro {
-        background-image: url(https://tik-choco.github.io/tikchoco-connect/30015512-7ead-4a0c-aa67-a354a7e9c333.png);
-        height: 100vh;
-      }
-
-      /* Height for devices larger than 576px */
-      @media (min-width: 992px) {
-        #intro {
-          margin-top: -58.59px;
-        }
-      }
-
-      .navbar .nav-link {
-        color: #fff !important;
-      }
-    </style>
 </head>
 <body>
       <!--Main Navigation-->
@@ -94,7 +77,7 @@
     <!-- Navbar -->
 
     <!-- Background image -->
-    <div id="intro" class="bg-image shadow-2-strong">
+    <div id="404_intro" class="bg-image shadow-2-strong">
       <div class="mask d-flex align-items-center h-100" style="background-color: rgba(0, 0, 0, 0.8);">
         <div class="container">
           <div class="row justify-content-center">
