--- a/404.html
+++ b/404.html
@@ -77,7 +77,7 @@
     <!-- Navbar -->
 
     <!-- Background image -->
-    <div id="404_intro" class="bg-image shadow-2-strong">
+    <div id="intro_404" class="bg-image shadow-2-strong">
       <div class="mask d-flex align-items-center h-100" style="background-color: rgba(0, 0, 0, 0.8);">
         <div class="container">
           <div class="row justify-content-center">
