--- a/maintenance.html
+++ b/maintenance.html
@@ -14,7 +14,7 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
     <!-- Custom styles -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style2.css" />
     <style>
       #intro {
         background-image: url(30015512-7ead-4a0c-aa67-a354a7e9c333.png);
