--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <a class="navbar-item">
               Home
             </a>
+            <a class="navbar-item" href="https://tik-choco.github.io/tikchoco-connect/speaker">
+              登壇者
+            </a>
       
             <a class="navbar-item" href="https://tik-choco.github.io/tikchoco-connect/news">
               News and Updates
