--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
                
             </div>
           </div>
-<!--       
+      
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
-                <a class="button is-primary">
-                  <strong>Sign up</strong>
+                <a class="button is-primary" href="https://discord.gg/2YteZwnUWv">
+                  <strong>Community</strong>
                 </a>
-                <a href="https://tik-choco.github.io/app/login" class="button is-light">
-                  Log in
+                <a href="https://game-creators.camp/recruits/qYAy4wQmEzc6bymBdoeB" class="button is-light">
+                  開発に参加する
                 </a>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </nav>
     </header>
