--- a/index.html
+++ b/index.html
@@ -3,7 +3,45 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icon.png">
+    <meta name="application-name" content="TikChoco Connect"/>
+    <meta name="msapplication-square70x70logo" content="img/icon.png"/>
+    <meta name="msapplication-square150x150logo" content="img/icon.png"/>
+    <meta name="msapplication-square310x310logo" content="img/icon.png"/>
+    <meta name="msapplication-wide310x150logo" content="img/icon.png"/>
+    <meta name="msapplication-TileColor" content="#0000ff"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>TikChoco Connect</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="content-language" content="ja" />
+    <meta name="description" content="「TikChoco Connect 」では、TikChoco制作の最新ゲーム情報をお届けいたします。" />
+    <meta name="keywords" content="TikChocoConnect,TikChoco,TikChoco Connect,TikChoco Connect2023" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="TikChoco Connect" />
+    <meta http-equiv="Content-Script-Type" content="text/JavaScript" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+    <meta name="subject" content="「TikChoco Connect 」では、TikChoco制作の最新ゲーム情報をお届けいたします。" />
+    <meta name="abstract" content="「TikChoco Connect 」では、TikChoco制作の最新ゲーム情報をお届けいたします。" />
+    <meta name="author" content="TikChoco" />
+    <meta name="owner" content="TikChoco" />
+    <meta name="designer" content="TikChoco" />
+    <meta name="pubrisher" content="TikChoco" />
+    <meta name="copyright" content="Copyright © TikChoco All Rights Reserved." />
+    <meta name="country code" scheme="81" />
+    <meta name="Targted Geographic Area" content="Japan" />
+    <meta name="distribution" content="Global" />
+    <meta name="coverage" content="Japan" />
+    <meta name="robots" content="INDEX,NOFOLLOW" />
+    <meta name="robots" content="NOARCHIVE" />
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta name="robots" content="NOIMAGEINDEX" />
+    <meta name="robots" content="NOIMAGECLICK" />
+    <meta name="expires" content="Novenbar 10, 1980" />
+    <meta name="revisit-after" content="2 days" />
+    <meta name="google" content="notranslate" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
