--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
 
     <div class="wrapper">
       <h1 class="title is-1">TikChoco Connectへようこそ。</h1>
+      <h2 class="title is-1 center">Concept：<div class="concept" >Expand your Universe</div></h2>
+      <p class="center">私たちは、あらゆる分野において常に挑戦と検証をし、それらを総合力として妥協なく積み上げ続けています。<br><br>
+        
+        TikChoco Connectではテクノロジーとクリエイティブが積み上げてきた歴史と新たなる挑戦<br>
+        注力している新技術や研究領域について多岐に渡るセッションを通じてみなさまにお届けします。</p>
 
       <h1 class="title is-4">お知らせ</h1>
     
