--- a/js/ footer.html
+++ b/js/ footer.html
@@ -1,3 +1,4 @@
+<html>
 <footer id="footer" class="footer">
     <div class="md-flex md-justify-between">
       <a href="https://tc.tik-choco.com/" class="footer__logo">
@@ -52,3 +53,4 @@
       </div>
     </div>
   </footer>
+  </html>
