--- a/js/ header.html
+++ b/js/ header.html
@@ -1,3 +1,4 @@
+<html>
 <header>
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
@@ -70,3 +71,4 @@
       </div>
     </nav>
   </header>
+  </html>
