--- a/inc/footer.html
+++ b/inc/footer.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" href="../css/news/import.css">
 <footer id="footer" class="footer">
     <div class="md-flex md-justify-between">
       <a href="https://tc.tik-choco.com/" class="footer__logo">
