--- a/inc/header.html
+++ b/inc/header.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" href="../css/news/import.css">
 <header>
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
