--- a/inc/header.html
+++ b/inc/header.html
@@ -14,7 +14,7 @@
         </a>
       </div>
     
-      <div id="navbarBasicExample" class="navbar-menu">
+      <div id="navbarBasicExample" class="navbar-menu gnavi">
         <div class="navbar-start">
           <a class="navbar-item">
             Home
