--- a/inc/header.html
+++ b/inc/header.html
@@ -16,7 +16,7 @@
     
       <div id="navbarBasicExample" class="navbar-menu gnavi">
         <div class="navbar-start">
-          <a class="navbar-item">
+          <a class="navbar-item" href="../index">
             Home
           </a>
           <a class="navbar-item" href="https://tik-choco.github.io/tikchoco-connect/speaker">
