--- a/inc/header.html
+++ b/inc/header.html
@@ -19,11 +19,11 @@
           <a class="navbar-item" href="../index">
             Home
           </a>
-          <a class="navbar-item" href="https://tik-choco.github.io/tikchoco-connect/speaker">
+          <a class="navbar-item" href="../speaker">
             登壇者
           </a>
     
-          <a class="navbar-item" href="https://tik-choco.github.io/tikchoco-connect/news">
+          <a class="navbar-item" href="../news">
             News and Updates
           </a>
           <div class="navbar-item has-dropdown is-hoverable">
@@ -31,7 +31,7 @@
               これまでのイベント
             </a>
             <div class="navbar-dropdown">
-              <a class="navbar-item" href="https://tik-choco.github.io/tikchoco-connect/2023Feb/">
+              <a class="navbar-item" href="../2023Feb/">
                 第1回TikChoco Connect
               </a>
               <!-- <a class="navbar-item">
@@ -48,10 +48,10 @@
 
              
           </div>
-          <a class="navbar-item" href="https://tik-choco.github.io/tikchoco-connect/title">
+          <a class="navbar-item" href="../title">
             開発中のタイトル
            </a>
-           <a class="navbar-item" href="https://tik-choco.github.io/tikchoco-connect/community">
+           <a class="navbar-item" href="../community">
             参加する
            </a>
         </div>
