--- a/inc/footer.html
+++ b/inc/footer.html
@@ -2,7 +2,7 @@
 <footer id="footer" class="footer">
     <div class="md-flex md-justify-between">
       <a href="https://tc.tik-choco.com/" class="footer__logo">
-        <img src="../img/logo.png" width="140" height="20" alt="Logo" />
+        <img src="https://tik-choco.github.io/tikchoco-connect/img/logo.png" width="140" height="20" alt="Logo" />
       </a>
       <!-- <div class="grid">
         <div>
