--- a/speaker.html
+++ b/speaker.html
@@ -235,13 +235,59 @@
     
   
   </div>
-  <footer id="footer" class=" bg-light text-lg-start">
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      ©  Copyright:
-      <a class="text-dark" href="https://tc.tik-choco.com/"> TikChoco </a>All Rights Reserved.
+  <footer id="footer" class="footer">
+    <div class="md-flex md-justify-between">
+      <a href="https://tc.tik-choco.com/" class="footer__logo">
+        <img src="img/logo.png" width="140" height="20" alt="JAJAAAN Logo" />
+      </a>
+      <!-- <div class="grid">
+        <div>
+          <p class="footer__navi-heading">SERVICE</p>
+          <ul class="footer__navi">
+            <li><a href="#">サービスA</a></li>
+            <li><a href="#">サービスB</a></li>
+            <li><a href="#">サービスC</a></li>
+          </ul>
+        </div>
+        <div>
+          <p class="footer__navi-heading">FOLLOW US</p>
+          <ul class="footer__navi">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+          </ul>
+        </div>
+        <div>
+          <p class="footer__navi-heading">ABOUT</p>
+          <ul class="footer__navi">
+            <li><a href="#">概要</a></li>
+            <li><a href="#">お問い合わせ</a></li>
+            <li><a href="#">サイトマップ</a></li>
+            <li><a href="#">プライバシーポリシー</a></li>
+          </ul>
+        </div>
+      </div> -->
     </div>
-    <!-- Copyright -->
+    <hr />
+    <div class="md-flex md-justify-between">
+      <p class="copyright">© 2023 <a class="text-dark" href="https://tc.tik-choco.com/">TikChoco </a> All Rights Reserved.
+      </p>
+      <div class="footer__social">
+        <a href="https://www.youtube.com/@tik-choco?themeRefresh=1">
+          <svg class="w-5 h-5" fill="currentColor"  aria-hidden="true" viewBox="-35.20005 -41.33325 305.0671 247.9995"><path d="M229.763 25.817c-2.699-10.162-10.65-18.165-20.747-20.881C190.716 0 117.333 0 117.333 0S43.951 0 25.651 4.936C15.554 7.652 7.602 15.655 4.904 25.817 0 44.237 0 82.667 0 82.667s0 38.43 4.904 56.85c2.698 10.162 10.65 18.164 20.747 20.881 18.3 4.935 91.682 4.935 91.682 4.935s73.383 0 91.683-4.935c10.097-2.717 18.048-10.72 20.747-20.88 4.904-18.422 4.904-56.851 4.904-56.851s0-38.43-4.904-56.85" fill="#282828"/><path d="M93.333 117.558l61.334-34.89-61.334-34.893z" fill="#fff"/></svg>
+        </a>
+        <a href="https://twitter.com/tikchoco">
+          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
+          </svg>
+        </a>
+        <a href="https://github.com/tik-choco">
+          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" />
+          </svg>
+        </a>
+      </div>
+    </div>
   </footer>
   </body>
 
