--- a/about.html
+++ b/about.html
@@ -14,7 +14,10 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
     <!-- Custom styles -->
-    <link rel="stylesheet" href="css/style2.css" />
+    <link
+    href="css/import.css"
+    rel="stylesheet"
+  />
     <style>
       #intro {
         background-image: url(30015512-7ead-4a0c-aa67-a354a7e9c333.png);
