--- a/community.html
+++ b/community.html
@@ -19,6 +19,10 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css"
     rel="stylesheet"
   />
+  <link
+  href="css/import.css"
+  rel="stylesheet"
+/>
   <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
