fix header Design

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/mdb.min.css" />
     <!-- Custom styles -->
     <link
-    href="css/import.css"
+    href="css/404.css"
     rel="stylesheet"
   />
     <style>
