2nd session update

--- a/maintenance.html
+++ b/maintenance.html
@@ -58,6 +58,9 @@
               <a class="nav-link" aria-current="page" href="index">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="news">Speaker</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="news">News and Updates</a>
             </li>
             <li class="nav-item">
