--- a/news.html
+++ b/news.html
@@ -60,6 +60,9 @@
                 <a class="nav-link" aria-current="page" href="index">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="news">Speaker</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="news">News and Updates</a>
               </li>
               <li class="nav-item">
@@ -70,9 +73,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="community">Join</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about">About</a>
               </li>
             </ul>
           </div>
