--- a/maintenance.html
+++ b/maintenance.html
@@ -58,7 +58,7 @@
               <a class="nav-link" aria-current="page" href="index">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="news">Speaker</a>
+              <a class="nav-link" href="speaker">Speaker</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="news">News and Updates</a>
