--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
     <meta name="google" content="notranslate" />
     
     <link rel="stylesheet" href="css/top/import.css">
+    <link
+    rel="stylesheet"
+    type="text/css"
+    href="css/slider.css"
+  />
   </head>
   <body>
     <header>
@@ -123,6 +128,7 @@
 
 
     <div class="wrapper">
+      
       <h1 class="title is-1">TikChoco Connectへようこそ。</h1>
       <!-- <img src="img/2023031116563535.jpg" width="100%"> -->
       <h2 class="title is-1 center">Concept：<div class="concept" >Expand your Universe</div></h2>
@@ -198,10 +204,12 @@
     </div>
   </footer>
   </body>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   <script src="js/lib/jquery.bxslider.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="js/page.js" ></script>
   <script src="js/lib/flickity.pkgd.min.js" ></script>
   <script src="js/footer.js" ></script>
+  <script src="js/main.js"></script>
+  <script src="js/flickity.pkgd.min.js"></script>
 </html>
