--- a/index.html
+++ b/index.html
@@ -125,10 +125,16 @@
     </header>
 
 
-
+    <div class="gallery js-flickity"
+    data-flickity-options='{ "wrapAround": true }'>
+    <div class="gallery-cell"><img src="top.png"></div>
+    <div class="gallery-cell"><img src="top.png"></div>
+    <div class="gallery-cell"><img src="top.png"></div>
+    <div class="gallery-cell"><img src="top.png"></div>
+  </div>
 
     <div class="wrapper">
-      
+
       <h1 class="title is-1">TikChoco Connectへようこそ。</h1>
       <!-- <img src="img/2023031116563535.jpg" width="100%"> -->
       <h2 class="title is-1 center">Concept：<div class="concept" >Expand your Universe</div></h2>
