--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/icon.png">
+    <link rel="shortcut icon" href="https://tik-choco.github.io/img/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://tik-choco.github.io/img/icon.png">
     <meta name="application-name" content="TikChoco Connect"/>
-    <meta name="msapplication-square70x70logo" content="img/icon.png"/>
-    <meta name="msapplication-square150x150logo" content="img/icon.png"/>
-    <meta name="msapplication-square310x310logo" content="img/icon.png"/>
-    <meta name="msapplication-wide310x150logo" content="img/icon.png"/>
+    <meta name="msapplication-square70x70logo" content="https://tik-choco.github.io/img/icon.png"/>
+    <meta name="msapplication-square150x150logo" content="https://tik-choco.github.io/img/icon.png"/>
+    <meta name="msapplication-square310x310logo" content="https://tik-choco.github.io/img/icon.png"/>
+    <meta name="msapplication-wide310x150logo" content="https://tik-choco.github.io/img/icon.png"/>
     <meta name="msapplication-TileColor" content="#0000ff"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -151,7 +151,7 @@
   <footer id="footer" class="footer">
     <div class="md-flex md-justify-between">
       <a href="https://tc.tik-choco.com/" class="footer__logo">
-        <img src="img/logo.png" width="140" height="20" alt="JAJAAAN Logo" />
+        <img src="https://tik-choco.github.io/img/logo.png" width="140" height="20" alt="JAJAAAN Logo" />
       </a>
       <!-- <div class="grid">
         <div>
